alertmanager-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert --volumes hostPath
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: alertmanager
  name: alertmanager
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: alertmanager
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert --volumes hostPath
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/monitoring-default: "true"
        io.kompose.service: alertmanager
    spec:
      containers:
        - args:
            - --config.file=/config/alertmanager.yml
            - --log.level=debug
          image: prom/alertmanager:latest
          name: alertmanager
          ports:
            - containerPort: 9093
          resources: {}
          volumeMounts:
            - mountPath: /config
              name: alertmanager-hostpath0
      restartPolicy: Always
      volumes:
        - hostPath:
            path: D:\projects\Docker\monitoring\config
          name: alertmanager-hostpath0
status: {}
