blackbox-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert --volumes hostPath
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: blackbox
  name: blackbox
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: blackbox
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert --volumes hostPath
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/monitoring-default: "true"
        io.kompose.service: blackbox
    spec:
      containers:
        - args:
            - --config.file=/etc/blackbox/blackbox.yml
          image: prom/blackbox-exporter
          name: blackbox
          ports:
            - containerPort: 9115
          resources: {}
          volumeMounts:
            - mountPath: /etc/blackbox/blackbox.yml
              name: blackbox-hostpath0
      restartPolicy: Always
      volumes:
        - hostPath:
            path: D:\projects\Docker\monitoring\blackbox.yml
          name: blackbox-hostpath0
status: {}
