blackbox-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert --volumes hostPath
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: blackbox
  name: blackbox
spec:
  ports:
    - name: "9115"
      port: 9115
      targetPort: 9115
  selector:
    io.kompose.service: blackbox
status:
  loadBalancer: {}
